--- a/partials/_userInput.scss
+++ b/partials/_userInput.scss
@@ -1,11 +1,12 @@
 section.userInput {
-    height: 30vh;
+    height: 40vh;
 }
 
 form {
+    padding: 50px 0;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
