--- a/partials/_generatedOutput.scss
+++ b/partials/_generatedOutput.scss
@@ -1,3 +1,18 @@
-section.generatedOutput {
+section.bottomSection {
     background: lightgrey;
+    // padding: 50px 0;
+}
+
+.generatedOutput {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.generatedOutput h2 {
+    margin-top: 75px;
+}
+
+.generatedOutput p {
+    margin-bottom: 75px;
 }
