--- a/styles/style.css
+++ b/styles/style.css
@@ -233,6 +233,29 @@ form {
           justify-content: center;
 }
 
+button {
+  margin-top: 25px;
+  width: 35%;
+  height: 15%;
+  border-radius: 10px;
+}
+
+.userInput .outerWrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 section.bottomSection {
   background: lightgrey;
 }
