--- a/partials/_header.scss
+++ b/partials/_header.scss
@@ -13,7 +13,7 @@ header {
     background-repeat: none;
 }
 
-header .outerWrapper {
+header .outer-wrapper { 
     display: flex;
     justify-content: center;
 }
