--- a/partials/_setup.scss
+++ b/partials/_setup.scss
@@ -9,7 +9,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
 //----------------------
 //---wrappers setup-----
 //----------------------
-.outerWrapper {
+.outer-wrapper {
     max-width: 1600px;
     margin: 0 auto; 
     height: 100%;
@@ -29,6 +29,11 @@ body {
 
 h1, h2 {
     font-family: 'Rubik', sans-serif;
+}
+
+h2 {
+    font-size: 2.25rem;
+    text-shadow: $shadowBlue 1px 0 10px;
 }
 
 p {
