--- a/partials/_userInput.scss
+++ b/partials/_userInput.scss
@@ -1,22 +1,35 @@
-section.userInput {
+section.user-input {
     height: 50vh;
     background-color: $highlightBlue;
 }
 
 form {
     height: 100%;
-    padding: 50px 0;
+    padding-bottom: 50px ;
     display: flex;
     flex-direction: column; 
     align-items: center;
     justify-content: center;
 }
 
+h2, label {
+    color: $greyBlue;
+}
+
+label {
+    margin-bottom: 15px;
+}
+
+output {
+    margin-top: 15px;
+}
+
 button {
     margin-top: 25px;
-    width: 35%;
-    height: 50px; 
+    width: 45%;
     border-radius: 10px;
+    padding: 25px 0;
+    
 }
 
 input {
@@ -25,12 +38,15 @@ input {
 
 fieldset {
     width: 100%;
+    height: 100%;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: space-around;
     border: none;
 }
 
-.userInput .outerWrapper {
+.user-input .outer-wrapper {
     display: flex;
     flex-direction: column; 
     align-items: center;
@@ -52,17 +68,17 @@ fieldset {
 input[type=range]::-webkit-slider-thumb {
     -webkit-appearance: none;
     margin-top: -14px;
-    @include sliderThumb();
+    @include slider-thumb();
 }
 
 //firefox styles
 input[type=range]::-moz-range-thumb {
-    @include sliderThumb();
+    @include slider-thumb();
 }
 
 //ie styles
 input[type=range]::-ms-thumb {
-    @include sliderThumb();
+    @include slider-thumb();
 }
 
 //---------------------------------------------
@@ -70,13 +86,13 @@ input[type=range]::-ms-thumb {
 //---------------------------------------------
 
 input[type=range]::-webkit-slider-runnable-track {
-    @include sliderTrack();
+    @include slider-track();
 }
 
 input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #367ebd;
+    background: $accentOrange;
 }
 
 input[type=range]::-moz-range-track {
-    @include sliderTrack();
+    @include slider-track();
 }
