--- a/styles/style.css
+++ b/styles/style.css
@@ -179,7 +179,7 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   overflow: hidden;
 }
 
-.outerWrapper {
+.outer-wrapper {
   max-width: 1600px;
   margin: 0 auto;
   height: 100%;
@@ -196,6 +196,11 @@ body {
 
 h1, h2 {
   font-family: 'Rubik', sans-serif;
+}
+
+h2 {
+  font-size: 2.25rem;
+  text-shadow: #214C80 1px 0 10px;
 }
 
 p {
@@ -227,7 +232,7 @@ input[type=range]::-ms-track {
 }
 
 h1 {
-  color: #cce3ff;
+  color: #eff6ff;
   margin-top: 6vh;
   font-size: 4rem;
   text-shadow: #4297FF 1px 0 20px;
@@ -241,7 +246,7 @@ header {
   background-repeat: none;
 }
 
-header .outerWrapper {
+header .outer-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -250,14 +255,14 @@ header .outerWrapper {
           justify-content: center;
 }
 
-section.userInput {
+section.user-input {
   height: 50vh;
-  background-color: #cce3ff;
+  background-color: #eff6ff;
 }
 
 form {
   height: 100%;
-  padding: 50px 0;
+  padding-bottom: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -273,11 +278,23 @@ form {
           justify-content: center;
 }
 
+h2, label {
+  color: #232e3a;
+}
+
+label {
+  margin-bottom: 15px;
+}
+
+output {
+  margin-top: 15px;
+}
+
 button {
   margin-top: 25px;
-  width: 35%;
-  height: 50px;
+  width: 45%;
   border-radius: 10px;
+  padding: 25px 0;
 }
 
 input {
@@ -286,15 +303,23 @@ input {
 
 fieldset {
   width: 100%;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   border: none;
 }
 
-.userInput .outerWrapper {
+.user-input .outer-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -349,13 +374,13 @@ input[type=range]::-webkit-slider-runnable-track {
   cursor: pointer;
   -webkit-box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
           box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  background: #3071a9;
+  background: #f71a0e;
   border-radius: 1.3px;
   border: 0.2px solid #010101;
 }
 
 input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #367ebd;
+  background: #f71a0e;
 }
 
 input[type=range]::-moz-range-track {
@@ -363,7 +388,7 @@ input[type=range]::-moz-range-track {
   height: 8.4px;
   cursor: pointer;
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  background: #3071a9;
+  background: #f71a0e;
   border-radius: 1.3px;
   border: 0.2px solid #010101;
 }
