--- a/partials/_setup.scss
+++ b/partials/_setup.scss
@@ -12,7 +12,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
 .outer-wrapper {
     max-width: 1600px;
     margin: 0 auto; 
-    height: 100%;
+    // height: 100%;
 }
 
 .wrapper {
@@ -27,13 +27,13 @@ body {
     font-size: 125%; 
 }
 
-h1, h2 {
+h1, h2, button {
     font-family: 'Rubik', sans-serif;
 }
 
 h2 {
     font-size: 2.25rem;
-    text-shadow: $shadowBlue 1px 0 10px;
+    text-shadow: $shadowBlue 1px 0 2px;
 }
 
 p {
@@ -48,7 +48,6 @@ p {
 
 input[type=range] {
     appearance: none; 
-    width: 100%;
     background: transparent;
 }
 
