--- a/partials/_header.scss
+++ b/partials/_header.scss
@@ -3,8 +3,9 @@ h1 {
     margin-top: 6vh;
     font-size: 4rem;
     text-shadow: $midtoneBlue 5px 0 30px;
-    background: rgba(5, 10, 20, 0.8);
+    background: rgba(5, 10, 20, 0.9);
     padding: 50px;
+    border-radius: 10px;
 }
 
 header {
