--- a/partials/_userInput.scss
+++ b/partials/_userInput.scss
@@ -1,8 +1,13 @@
 section.user-input {
     height: 50vh;
-    background: linear-gradient(rgba(239,246,255, 0.9), rgba(239,246,255, 0.9)), url(../assets/city-hall.jpg);
+    background: linear-gradient(rgba(239,246,255, 0.8), rgba(239,246,255, 0.8)), url(../assets/city-hall.jpg);
     background-size: cover;
     background-position: center center;
+}
+
+.outer-wrapper {
+    height: 100%;
+    
 }
 
 form {
@@ -12,13 +17,6 @@ form {
 
 h2, label {
     color: $greyBlue;
-}
-
-label {
-    // margin-bottom: 15px;
-    
-    width: 30%;
-    float: left;
 }
 
 output {
@@ -33,24 +31,40 @@ button {
     margin: 25px auto 0 auto;
     display: block;
     border: none;
-    background-color: #f71a0e;
-    color: #eff6ff;
+    background-color: $shadowBlue; 
+    color: $highlightBlue;
+    transition: 0.25s;
+}
+
+button:hover {
+    box-shadow: 0px 0px 10px 10px $accentOrange;
+}
+
+button:active {
+    background-color: $accentOrange; 
+    color: $shadowBlue;
+    box-shadow: 0px 0px 10px 10px $shadowBlue;
 }
 
 input {
-    margin-top: 7px;
-    width: 63%;
-    float: right;
+    width: 50%;
+}
+
+label {
+    width: 40%;
+    margin-left: 25px;
 }
 
 fieldset {
     width: 100%;
-    height: 100%;
-    border: none;
-    // display: flex;
-    // flex-direction: row;
-    // justify-content: space-between;
-    // align-items: center;
+    border: none; 
+    padding: 25px 0;
+    background-color: rgba(239,246,255, 0.9);
+    border-radius: 10px;
+    border: 1px solid $midtoneBlue;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .user-input .outer-wrapper {
