--- a/styles/style.css
+++ b/styles/style.css
@@ -165,7 +165,7 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   box-sizing: border-box;
 }
 
-.visuallyHidden:not(:focus):not(:active) {
+.visually-hidden:not(:focus):not(:active) {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -193,7 +193,7 @@ body {
   font-size: 125%;
 }
 
-h1, h2, button {
+h1, h2, button, label {
   font-family: 'Rubik', sans-serif;
 }
 
@@ -234,8 +234,9 @@ h1 {
   margin-top: 6vh;
   font-size: 4rem;
   text-shadow: #4297FF 5px 0 30px;
-  background: rgba(5, 10, 20, 0.8);
+  background: rgba(5, 10, 20, 0.9);
   padding: 50px;
+  border-radius: 10px;
 }
 
 header {
@@ -257,10 +258,14 @@ header .outer-wrapper {
 
 section.user-input {
   height: 50vh;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(239, 246, 255, 0.9)), to(rgba(239, 246, 255, 0.9))), url(../assets/city-hall.jpg);
-  background: linear-gradient(rgba(239, 246, 255, 0.9), rgba(239, 246, 255, 0.9)), url(../assets/city-hall.jpg);
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(239, 246, 255, 0.8)), to(rgba(239, 246, 255, 0.8))), url(../assets/city-hall.jpg);
+  background: linear-gradient(rgba(239, 246, 255, 0.8), rgba(239, 246, 255, 0.8)), url(../assets/city-hall.jpg);
   background-size: cover;
   background-position: center center;
+}
+
+.outer-wrapper {
+  height: 100%;
 }
 
 form {
@@ -270,11 +275,6 @@ form {
 
 h2, label {
   color: #232e3a;
-}
-
-label {
-  width: 30%;
-  float: left;
 }
 
 output {
@@ -288,20 +288,49 @@ button {
   margin: 25px auto 0 auto;
   display: block;
   border: none;
-  background-color: #f71a0e;
+  background-color: #214C80;
   color: #eff6ff;
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
+}
+
+button:hover {
+  -webkit-box-shadow: 0px 0px 10px 10px #f71a0e;
+          box-shadow: 0px 0px 10px 10px #f71a0e;
+}
+
+button:active {
+  background-color: #f71a0e;
+  color: #214C80;
+  -webkit-box-shadow: 0px 0px 10px 10px #214C80;
+          box-shadow: 0px 0px 10px 10px #214C80;
 }
 
 input {
-  margin-top: 7px;
-  width: 63%;
-  float: right;
+  width: 50%;
+}
+
+label {
+  width: 40%;
+  margin-left: 25px;
 }
 
 fieldset {
   width: 100%;
-  height: 100%;
   border: none;
+  padding: 25px 0;
+  background-color: rgba(239, 246, 255, 0.9);
+  border-radius: 10px;
+  border: 1px solid #4297FF;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .user-input .outer-wrapper {
