--- a/partials/_setup.scss
+++ b/partials/_setup.scss
@@ -9,17 +9,28 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
 
 .visually-hidden:not(:focus):not(:active) { position: absolute; width: 1px; height: 1px; margin: -1px;border: 0;padding: 0;white-space: nowrap;clip-path: inset(100%);clip: rect(00 0 0);overflow: hidden;}
 
+
+//----------------------------
+//---strip default styles-----
+//----------------------------
+h2 {
+    margin: 0;
+    padding: 0;
+}
+
 //----------------------
 //---wrappers setup-----
 //----------------------
 .outer-wrapper {
     max-width: 1600px;
-    margin: 0 auto; 
+    margin: 0 auto;
+    height: 100%; 
 }
 
-.wrapper {
+.inner-wrapper {
     width: 80%;
     margin: 0 auto;
+    height: 100%;
 }
 
 //-------------------------------
@@ -36,7 +47,7 @@ h1, h2, button, label {
 
 h2 {
     font-size: 2.25rem;
-    text-shadow: $shadowBlue 1px 0 2px;
+    color: $highlightBlue;
 }
 
 p {
