--- a/partials/_user-input.scss
+++ b/partials/_user-input.scss
@@ -1,22 +1,15 @@
-section.user-input {
-    height: 50vh;
-    background: linear-gradient(rgba(239,246,255, 0.8), rgba(239,246,255, 0.8)), url(../assets/city-hall.jpg);
-    background-size: cover;
-    background-position: center center;
-}
-
-.outer-wrapper {
-    height: 100%;
-    
-}
-
 form {
-    height: 100%;
-    padding-bottom: 50px ; 
+    width: 100%;
 }
 
-h2, label {
-    color: $greyBlue;
+h2 {
+    margin: 25px 0 75px 0;
+}
+
+.user-input {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 output {
@@ -24,26 +17,27 @@ output {
 }
 
 button {
-    // margin-top: 25px;
     width: 45%;
     border-radius: 10px;
     padding: 25px 0;
-    margin: 25px auto 0 auto;
+    margin: 50px auto 0 auto;
     display: block;
-    border: none;
+    border: 2px $highlightBlue solid;
     background-color: $shadowBlue; 
     color: $highlightBlue;
     transition: 0.25s;
 }
 
 button:hover {
-    box-shadow: 0px 0px 10px 10px $accentOrange;
+    background-color: $highlightBlue;
+    border: 2px $shadowBlue solid;
+    color: $shadowBlue;
 }
 
 button:active {
-    background-color: $accentOrange; 
-    color: $shadowBlue;
-    box-shadow: 0px 0px 10px 10px $shadowBlue;
+    background-color: $midtoneBlue; 
+    color: $highlightBlue;
+    border: 2px $highlightBlue solid;
 }
 
 input {
@@ -51,27 +45,20 @@ input {
 }
 
 label {
-    width: 40%;
-    margin-left: 25px;
+    width: 30%;
+    color: $greyBlue;
 }
 
 fieldset {
     width: 100%;
     border: none; 
     padding: 25px 0;
-    background-color: rgba(239,246,255, 0.9);
+    background-color: rgba(239,246,255, 0.75);
     border-radius: 10px;
     border: 1px solid $midtoneBlue;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-}
-
-.user-input .outer-wrapper {
-    display: flex;
-    flex-direction: column; 
-    align-items: center;
-    justify-content: center;
 }
 
 //-------------------------------------------------------------------------------
