--- a/partials/style.scss
+++ b/partials/style.scss
@@ -1,5 +1,6 @@
 @import "variables";
 @import "setup";
+@import "overall-start-page";
 @import "header";
-@import "userInput";
-@import "generatedOutput";
+@import "user-input";
+@import "generated-output";
