--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -9,6 +9,11 @@ $greyBlue: #232e3a;
 $midShadowBlue: #3579CC;
 $accentOrange: #f71a0e;
 
+//-------------------------
+//------border styles------
+//-------------------------
+$round-borders: 20px;
+
 //-------------------------------------------------------------------------------
 //-------mixins for input range styling------------------------------------------
 //--------based on examples by Daniel Stren--------------------------------------
