--- a/partials/_overall-start-page.scss
+++ b/partials/_overall-start-page.scss
@@ -5,7 +5,7 @@
 .start-page {
     background-image: url("../assets/city-hall-night.jpg");
     background-size: cover;
-    background-position: center 70%;
+    background-position: center center;
     background-repeat: none;
     height: 100vh;
 }
