--- a/partials/_generated-output.scss
+++ b/partials/_generated-output.scss
@@ -3,6 +3,7 @@ section.bottom-section {
 }
 
 .generated-output {
+    padding: 75px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -10,11 +11,8 @@ section.bottom-section {
 
 .generated-output h2,
 .generated-output p {
-    margin: 50px 0 0 0;
     color: $highlightBlue;
 }
 
-.generated-output p {
-    margin-bottom: 75px;
-}
+
 
