--- a/styles/style.css
+++ b/styles/style.css
@@ -179,6 +179,10 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   overflow: hidden;
 }
 
+h1 {
+  margin: 0;
+}
+
 h2 {
   margin: 0;
   padding: 0;
@@ -236,10 +240,15 @@ input[type=range]::-ms-track {
   color: transparent;
 }
 
+h1 {
+  color: #eff6ff;
+  font-size: 3.6rem;
+}
+
 .start-page {
   background-image: url("../assets/city-hall-night.jpg");
   background-size: cover;
-  background-position: center 70%;
+  background-position: center center;
   background-repeat: none;
   height: 100vh;
 }
@@ -249,6 +258,7 @@ input[type=range]::-ms-track {
 }
 
 .start-page-content-box {
+  padding: 5vh 0;
   width: 100%;
   height: 100%;
   display: -webkit-box;
@@ -265,26 +275,12 @@ input[type=range]::-ms-track {
   background-color: rgba(5, 10, 20, 0.85);
 }
 
-h1 {
-  color: #eff6ff;
-  font-size: 3.6rem;
-}
-
-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
 form {
   width: 100%;
 }
 
 h2 {
-  margin: 25px 0 75px 0;
+  margin: 25px 0 5px 0;
 }
 
 .user-input {
@@ -341,7 +337,8 @@ label {
 fieldset {
   width: 100%;
   border: none;
-  padding: 25px 0;
+  padding: 15px 0;
+  margin-top: 20px;
   background-color: rgba(239, 246, 255, 0.75);
   border-radius: 20px;
   border: 1px solid #4297FF;
@@ -418,6 +415,7 @@ section.bottom-section {
 }
 
 .generated-output {
+  padding: 75px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -432,11 +430,6 @@ section.bottom-section {
 
 .generated-output h2,
 .generated-output p {
-  margin: 50px 0 0 0;
   color: #eff6ff;
-}
-
-.generated-output p {
-  margin-bottom: 75px;
 }
 /*# sourceMappingURL=style.css.map */
