--- a/partials/_user-input.scss
+++ b/partials/_user-input.scss
@@ -1,5 +1,14 @@
+//-------------------------------------------------
+//--------Main section styles / input area---------
+//-------------------------------------------------
+
 form {
     width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
 
 h2 {
@@ -10,6 +19,7 @@ h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100%;
 }
 
 output {
@@ -100,9 +110,50 @@ input[type=range]::-webkit-slider-runnable-track {
 }
 
 input[type=range]:focus::-webkit-slider-runnable-track {
-    background: $accentOrange;
+    background: $midShadowBlue;
 }
 
 input[type=range]::-moz-range-track {
     @include slider-track();
+}
+
+
+//----------------------------------------
+//------media queries for responsive------
+//----------------------------------------
+
+@media (max-width: 950px) {
+    //reduce heading font size
+    h2 {
+        font-size: 1.75rem;
+        text-align: center;
+    }
+
+    //reduce font size for labels
+    label {
+        font-size: 0.9rem;
+    }
+}
+
+//realign some of the input fields
+@media (max-width: 600px) {
+    button {
+        margin-top: 25px;
+    }
+}
+
+@media (max-width: 475px) {
+    h2 {
+        font-size: 1.25rem;
+        margin: 10px auto 0 auto;
+    }
+
+    fieldset {
+        margin-top: 10px;
+    }
+
+    //reduce font size for labels
+    label {
+        font-size: 0.75rem;
+    }
 }
