--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -20,6 +20,7 @@ $round-borders: 20px;
 //---https://css-tricks.com/styling-cross-browser-compatible-range-inputs-css/---
 //-------------------------------------------------------------------------------
 
+//sliding thumb styles
 @mixin slider-thumb() {
     border: 1px solid #000000;
     height: 36px;
@@ -30,6 +31,7 @@ $round-borders: 20px;
     box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; 
 }
 
+//slider track styles
 @mixin slider-track() {
     width: 100%;
     height: 8.4px;
