--- a/styles/style.css
+++ b/styles/style.css
@@ -275,8 +275,50 @@ h1 {
   background-color: rgba(5, 10, 20, 0.85);
 }
 
+@media (max-width: 950px) {
+  h1 {
+    font-size: 2.5rem;
+    text-align: center;
+  }
+}
+
+@media (max-width: 700px) {
+  .start-page-content-box {
+    padding: 25px 5%;
+  }
+}
+
+@media (max-width: 475px) {
+  .start-page-content-box {
+    padding: 15px 2.5%;
+  }
+  h1 {
+    font-size: 2.25rem;
+  }
+}
+
+@media (max-width: 400px) {
+  h1 {
+    font-size: 2rem;
+  }
+}
+
 form {
   width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 h2 {
@@ -294,6 +336,7 @@ h2 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  height: 100%;
 }
 
 output {
@@ -397,7 +440,7 @@ input[type=range]::-webkit-slider-runnable-track {
 }
 
 input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #f71a0e;
+  background: #3579CC;
 }
 
 input[type=range]::-moz-range-track {
@@ -408,6 +451,35 @@ input[type=range]::-moz-range-track {
   background: #3579CC;
   border-radius: 1.3px;
   border: 0.2px solid #010101;
+}
+
+@media (max-width: 950px) {
+  h2 {
+    font-size: 1.75rem;
+    text-align: center;
+  }
+  label {
+    font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 600px) {
+  button {
+    margin-top: 25px;
+  }
+}
+
+@media (max-width: 475px) {
+  h2 {
+    font-size: 1.25rem;
+    margin: 10px auto 0 auto;
+  }
+  fieldset {
+    margin-top: 10px;
+  }
+  label {
+    font-size: 0.75rem;
+  }
 }
 
 section.bottom-section {
@@ -431,5 +503,11 @@ section.bottom-section {
 .generated-output h2,
 .generated-output p {
   color: #eff6ff;
+}
+
+@media (max-width: 500px) {
+  p {
+    font-size: 1.1rem;
+  }
 }
 /*# sourceMappingURL=style.css.map */
