--- a/partials/_overall-start-page.scss
+++ b/partials/_overall-start-page.scss
@@ -51,11 +51,19 @@ h1 {
 @media (max-width: 475px) {
     //add some padding to side of inner box
     .start-page-content-box {
-        padding: 15px 2.5%;
+        padding: 15px 2%;
     }
 
     h1 {
         font-size: 2.25rem;
+    }
+
+    .inner-wrapper {
+        width: 90%;
+    }
+
+    .start-page .inner-wrapper {
+        padding: 2.5vh 0;
     }
 }
 
