--- a/partials/_user-input.scss
+++ b/partials/_user-input.scss
@@ -156,4 +156,8 @@ input[type=range]::-moz-range-track {
     label {
         font-size: 0.75rem;
     }
+
+    form {
+        padding: 5vh 0;
+    }
 }
