changed inputs to selectors due to styling breaking across browsers

--- a/partials/_setup.scss
+++ b/partials/_setup.scss
@@ -48,13 +48,12 @@ h1, h2, button, label {
     font-family: 'Rubik', sans-serif;
 }
 
-
 h2 {
     font-size: 2.25rem;
     color: $highlightBlue;
 }
 
-p {
+p, select {
     font-family: 'Karla', sans-serif;
 }
 
