--- a/partials/_user-input.scss
+++ b/partials/_user-input.scss
@@ -20,6 +20,17 @@ h2 {
     flex-direction: column;
     align-items: center;
     height: 100%;
+    
+}
+.selectors {
+    width: 100%;
+    text-align:center;
+}
+
+select { 
+    border-radius: $round-borders;
+    font-size: 1.2rem;
+    height: 4.5vh;
 }
 
 output {
@@ -50,71 +61,17 @@ button:active {
     border: 2px $highlightBlue solid;
 }
 
-input {
-    width: 50%;
-}
-
 label {
-    width: 30%;
+    margin-right: 10px;
     color: $greyBlue;
 }
 
-fieldset {
-    width: 100%;
-    border: none; 
-    padding: 15px 0;
+.selector-area {
+    padding: 10px 0;
     margin-top: 20px;
     background-color: rgba(239,246,255, 0.75);
     border-radius: $round-borders;
     border: 1px solid $midtoneBlue;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-
-//-------------------------------------------------------------------------------
-//-----------input range slider styles-------------------------------------------
-//---------much harder than it should be-----------------------------------------
-//--------based on examples by Daniel Stren--------------------------------------
-//---https://css-tricks.com/styling-cross-browser-compatible-range-inputs-css/---
-//-------------------------------------------------------------------------------
-
-//--------------------------------------------
-//------------Style slider thumb-thingy-------
-//--------------------------------------------
-
-//webkit/blink specific styling
-input[type=range]::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    margin-top: -14px;
-    @include slider-thumb();
-}
-
-//firefox styles
-input[type=range]::-moz-range-thumb {
-    @include slider-thumb();
-}
-
-//ie styles
-input[type=range]::-ms-thumb {
-    @include slider-thumb();
-}
-
-//---------------------------------------------
-//------------Style slider track---------------
-//---------------------------------------------
-
-input[type=range]::-webkit-slider-runnable-track {
-    @include slider-track();
-}
-
-input[type=range]:focus::-webkit-slider-runnable-track {
-    background: $midShadowBlue;
-}
-
-input[type=range]::-moz-range-track {
-    @include slider-track();
 }
 
 
@@ -140,6 +97,24 @@ input[type=range]::-moz-range-track {
     button {
         margin-top: 25px;
     }
+
+    label {
+        margin: 0 0 5px 0;
+    }
+
+    select { 
+        font-size: 1rem;
+    }
+
+    .selector-area {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    select {
+        width: 50%;
+    }
 }
 
 @media (max-width: 475px) {
@@ -148,13 +123,8 @@ input[type=range]::-moz-range-track {
         margin: 10px auto 0 auto;
     }
 
-    fieldset {
+    .selector-area {
         margin-top: 10px;
-    }
-
-    //reduce font size for labels
-    label {
-        font-size: 0.75rem;
     }
 
     form {
