--- a/styles/style.css
+++ b/styles/style.css
@@ -213,7 +213,7 @@ h2 {
   color: #eff6ff;
 }
 
-p {
+p, select {
   font-family: 'Karla', sans-serif;
 }
 
@@ -345,6 +345,17 @@ h2 {
   height: 100%;
 }
 
+.selectors {
+  width: 100%;
+  text-align: center;
+}
+
+select {
+  border-radius: 20px;
+  font-size: 1.2rem;
+  height: 4.5vh;
+}
+
 output {
   margin-top: 15px;
 }
@@ -374,89 +385,17 @@ button:active {
   border: 2px #eff6ff solid;
 }
 
-input {
-  width: 50%;
-}
-
 label {
-  width: 30%;
+  margin-right: 10px;
   color: #232e3a;
 }
 
-fieldset {
-  width: 100%;
-  border: none;
-  padding: 15px 0;
+.selector-area {
+  padding: 10px 0;
   margin-top: 20px;
   background-color: rgba(239, 246, 255, 0.75);
   border-radius: 20px;
   border: 1px solid #4297FF;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-input[type=range]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  margin-top: -14px;
-  border: 1px solid #000000;
-  height: 36px;
-  width: 16px;
-  border-radius: 3px;
-  background: #ffffff;
-  cursor: pointer;
-  -webkit-box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-          box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-}
-
-input[type=range]::-moz-range-thumb {
-  border: 1px solid #000000;
-  height: 36px;
-  width: 16px;
-  border-radius: 3px;
-  background: #ffffff;
-  cursor: pointer;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-}
-
-input[type=range]::-ms-thumb {
-  border: 1px solid #000000;
-  height: 36px;
-  width: 16px;
-  border-radius: 3px;
-  background: #ffffff;
-  cursor: pointer;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-}
-
-input[type=range]::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 8.4px;
-  cursor: pointer;
-  -webkit-box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-          box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  background: #3579CC;
-  border-radius: 1.3px;
-  border: 0.2px solid #010101;
-}
-
-input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #3579CC;
-}
-
-input[type=range]::-moz-range-track {
-  width: 100%;
-  height: 8.4px;
-  cursor: pointer;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  background: #3579CC;
-  border-radius: 1.3px;
-  border: 0.2px solid #010101;
 }
 
 @media (max-width: 950px) {
@@ -473,6 +412,27 @@ input[type=range]::-moz-range-track {
   button {
     margin-top: 25px;
   }
+  label {
+    margin: 0 0 5px 0;
+  }
+  select {
+    font-size: 1rem;
+  }
+  .selector-area {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  select {
+    width: 50%;
+  }
 }
 
 @media (max-width: 475px) {
@@ -480,11 +440,8 @@ input[type=range]::-moz-range-track {
     font-size: 1.25rem;
     margin: 10px auto 0 auto;
   }
-  fieldset {
+  .selector-area {
     margin-top: 10px;
-  }
-  label {
-    font-size: 0.75rem;
   }
   form {
     padding: 5vh 0;
