added word category selection

--- a/partials/_generated-output.scss
+++ b/partials/_generated-output.scss
@@ -18,6 +18,10 @@ section.bottom-section {
     color: $highlightBlue;
 }
 
+h2.scroll-down-notification {
+    margin: 0 auto;
+}
+
 //----------------------------------------
 //------media queries for responsive------
 //----------------------------------------
