--- a/partials/_overall-start-page.scss
+++ b/partials/_overall-start-page.scss
@@ -9,7 +9,7 @@ h1 {
 .start-page {
     background-image: url("../assets/city-hall-night.jpg");
     background-size: cover;
-    background-position: center center;
+    background-position: center 65%;
     background-repeat: none;
     height: 100vh;
 }
@@ -58,10 +58,6 @@ h1 {
         font-size: 2.25rem;
     }
 
-    .inner-wrapper {
-        width: 90%;
-    }
-
     .start-page .inner-wrapper {
         padding: 2.5vh 0;
     }
@@ -70,5 +66,9 @@ h1 {
 @media (max-width: 400px) {
     h1 {
         font-size: 2rem;
+    }
+
+    .start-page-content-box {
+        padding: 10px 2%;
     }
 }
