--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -13,6 +13,7 @@ $midShadowBlue: #3579CC;
 //-------------------------
 $round-borders: 20px;
 
+$focus-outline: 3px solid $highlightBlue;
 
 //------------------------
 //--------mixins----------
