--- a/partials/_user-input.scss
+++ b/partials/_user-input.scss
@@ -36,9 +36,17 @@ select {
     height: 4.5vh;
 }
 
+select:focus {
+    outline: $focus-outline;
+}
+
 label {
     margin-right: 10px;
     color: $highlightBlue;
+}
+
+label:focus {
+    outline: $focus-outline;
 }
 
 .selector-area {
@@ -46,9 +54,10 @@ label {
 }
 
 //category checkbox styles
-//class visually-hidden seems to be bugged on firefox, so display none checkboxes to hide
+//class visually-hidden seems to be bugged on firefox for checkboxes, so move checkboxes off the page to hide
 input[type=checkbox] {
-    display: none;
+    position:absolute;
+    left: -100%;
 }
 
 .categories label {
@@ -58,9 +67,14 @@ input[type=checkbox] {
     @include button-style;
 }
 
+//focus state of label 'button'
+input[type=checkbox]:focus + label {
+    outline: $focus-outline;
+}
 
 //button styles
 button {
+    font-size: 2rem;
     width: 45%;
     padding: 25px 0;
     margin: 50px auto 0 auto;
@@ -78,6 +92,10 @@ button:active,
     @include button-active;
 }
 
+
+button:focus {
+    outline: $focus-outline;
+}
 
 
 //----------------------------------------
@@ -140,6 +158,7 @@ button:active,
 
     button {
         margin: 10px auto 0 auto;
+        font-size: 1.5rem;
     }
 }
 
@@ -174,5 +193,6 @@ button:active,
 
     button {
         padding: 20px 0;
+        font-size: 1.25rem;
     }
 }
