--- a/styles/style.css
+++ b/styles/style.css
@@ -205,7 +205,7 @@ body {
 }
 
 h1, h2, button, label {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 h2 {
@@ -214,30 +214,7 @@ h2 {
 }
 
 p, select {
-  font-family: 'Karla', sans-serif;
-}
-
-input[type=range] {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  background: transparent;
-}
-
-input[type=range]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-}
-
-input[type=range]:focus {
-  outline: none;
-}
-
-input[type=range]::-ms-track {
-  width: 100%;
-  cursor: pointer;
-  background: transparent;
-  border-color: transparent;
-  color: transparent;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 h1 {
@@ -358,9 +335,17 @@ select {
   height: 4.5vh;
 }
 
+select:focus {
+  outline: 3px solid #eff6ff;
+}
+
 label {
   margin-right: 10px;
   color: #eff6ff;
+}
+
+label:focus {
+  outline: 3px solid #eff6ff;
 }
 
 .selector-area {
@@ -368,7 +353,8 @@ label {
 }
 
 input[type=checkbox] {
-  display: none;
+  position: absolute;
+  left: -100%;
 }
 
 .categories label {
@@ -383,7 +369,12 @@ input[type=checkbox] {
   transition: 0.25s;
 }
 
+input[type=checkbox]:focus + label {
+  outline: 3px solid #eff6ff;
+}
+
 button {
+  font-size: 2rem;
   width: 45%;
   padding: 25px 0;
   margin: 50px auto 0 auto;
@@ -408,6 +399,10 @@ button:active,
   background-color: #4297FF;
   color: #eff6ff;
   border: 2px #eff6ff solid;
+}
+
+button:focus {
+  outline: 3px solid #eff6ff;
 }
 
 @media (max-width: 950px) {
@@ -468,6 +463,7 @@ button:active,
   }
   button {
     margin: 10px auto 0 auto;
+    font-size: 1.5rem;
   }
 }
 
@@ -497,6 +493,7 @@ button:active,
   }
   button {
     padding: 20px 0;
+    font-size: 1.25rem;
   }
 }
 
