--- a/styles/style.css
+++ b/styles/style.css
@@ -263,14 +263,14 @@ h1 {
   .start-page-content-box {
     padding: 25px 5%;
   }
+  h1 {
+    font-size: 2.25rem;
+  }
 }
 
 @media (max-width: 475px) {
   .start-page-content-box {
     padding: 15px 2%;
-  }
-  h1 {
-    font-size: 2.25rem;
   }
   .start-page .inner-wrapper {
     padding: 2.5vh 0;
@@ -349,7 +349,11 @@ label:focus {
 }
 
 .selector-area {
-  margin-top: 30px;
+  margin-top: 15px;
+}
+
+.categories {
+  margin-top: 20px;
 }
 
 input[type=checkbox] {
@@ -430,12 +434,28 @@ button:focus {
   }
   .categories label {
     margin: 10px 0;
+    font-size: 1rem;
+  }
+  button {
+    margin: 10px auto 0 auto;
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 700px) {
+  h2 {
+    font-size: 1.25rem;
+    margin: 10px auto 0 auto;
+  }
+  .selector-area {
+    margin-top: 25px;
   }
 }
 
 @media (max-width: 600px) {
   button {
-    margin-top: 25px;
+    margin-top: 0px;
+    padding: 20px 0;
   }
   label {
     margin: 0 0 5px 0;
@@ -454,24 +474,17 @@ button:focus {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    margin-top: 15px;
   }
   select {
     width: 50%;
   }
   .categories label {
-    font-size: 1rem;
-  }
-  button {
-    margin: 10px auto 0 auto;
-    font-size: 1.5rem;
+    padding: 20px 15px;
   }
 }
 
 @media (max-width: 475px) {
-  h2 {
-    font-size: 1.25rem;
-    margin: 10px auto 0 auto;
-  }
   .selector-area {
     margin-top: 10px;
   }
